--- a/src/components/Navbar/styles.css
+++ b/src/components/Navbar/styles.css
@@ -5,7 +5,7 @@
     top: 0;
     width: 100%;
     background-color: var(--main-color);
-    max-height: 64px;
+    height: var(--navbar-height);
 }
 
 .navbar-container > img{
