--- a/src/sections/Home/styles.css
+++ b/src/sections/Home/styles.css
@@ -14,8 +14,9 @@
     border-radius: 200px;
 }
 
-.home-container > p {
+.home-container p {
     max-width: 640px;
+    text-align: justify;
 }
 
 h1 {
